# maski

./: .gitmodules  Cargo.toml  LICENSE  PLAN.md  README.md  build.rs  flake.nix
.github/workflows/: cachix.yml
src/: interactive.rs  main.rs  maskfile_reader.rs  md4x.rs  types.rs
