[package]
name = "maski"
version = "0.1.1"
edition = "2021"
description = "Interactive TUI for mask — browse and run maskfile commands with fuzzy search"
authors = ["ManUtopiK"]
repository = "https://github.com/ManUtopiK/maski"
license = "MIT"
keywords = ["mask", "maskfile", "interactive", "tui", "task-runner"]
categories = ["command-line-utilities", "development-tools"]

[build-dependencies]
cc = "1"

[dependencies]
skim = "0.10"
dialoguer = "0.11"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
colored = "2"
clap = { version = "4", features = ["derive"] }
